examples/test/testpolicy8386.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8386
  namespace: namespace8
spec:
  podSelector:
    matchLabels:
      key17: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value49
          key4: value11
          key31: value24
      podSelector:
        matchLabels:
          key22: value28
          key42: value42
